# ml-utils

./: README.md  pyproject.toml
src/: abstract.py  dataviz.py  eval.py  linalg.py  linreg.py  loss.py  mat.py  stats.py  synth.py
